@@ -8,7 +8,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class CorsConfig {
@@ -21,7 +21,7 @@ public class CorsConfig {
 
         configuration.setAllowedOrigins(
 
-                Arrays.asList(
+                List.of(
 
                         "http://localhost:4200",
 
@@ -33,16 +33,12 @@ public class CorsConfig {
 
         configuration.setAllowedMethods(
 
-                Arrays.asList(
+                List.of(
 
                         "GET",
-
                         "POST",
-
                         "PUT",
-
                         "DELETE",
-
                         "OPTIONS"
 
                 )
@@ -51,7 +47,7 @@ public class CorsConfig {
 
         configuration.setAllowedHeaders(
 
-                Arrays.asList("*")
+                List.of("*")
 
         );
 
